[package]
name = "mad-rust-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bincode = "1.3.3"
dirs = "4.0.0"
hashbrown = "0.12.1"
notify = "4.0.17"
barrage = "0.2.3"
tokio = "1.19.2"
futures = "0.3.21"