[package]
name = "mad-rust-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.27.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
bincode = "1.3.3"
dirs = "4.0.0"
hashbrown = "0.13.1"
notify = "4.0.17"
barrage = "0.2.3"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
libc = "0.2.139"